exports[`<SaveMenu /> snapshot tests matches default snapshot 1`] = `
<span
  style={
    Object {
      "height": "48px",
    }
  }>
  <span>
    <div
      data-for="save-tip"
      data-tip={true}
      style={
        Object {
          "display": "inline-block",
        }
      }>
      <IconMenu
        anchorOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        animated={true}
        iconButtonElement={
          <IconButton
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            tooltipPosition="bottom-center"
            touch={false}>
            <ContentSave />
          </IconButton>
        }
        id="menu"
        multiple={false}
        onItemTouchTap={[Function]}
        onKeyboardFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onRequestChange={[Function]}
        onTouchTap={[Function]}
        open={null}
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        touchTapCloseDelay={200}
        useLayerForClickAway={false}>
        <MenuItem
          anchorOrigin={
            Object {
              "horizontal": "right",
              "vertical": "top",
            }
          }
          checked={false}
          desktop={false}
          disabled={false}
          focusState="none"
          insetChildren={false}
          onTouchTap={[Function]}
          primaryText="Save" />
        <MenuItem
          anchorOrigin={
            Object {
              "horizontal": "right",
              "vertical": "top",
            }
          }
          checked={false}
          desktop={false}
          disabled={false}
          focusState="none"
          insetChildren={false}
          onTouchTap={[Function]}
          primaryText="Save As" />
      </IconMenu>
    </div>
    <ReactTooltip
      effect="solid"
      id="save-tip"
      insecure={true}
      place="bottom"
      resizeHide={true}
      wrapper="div">
      Save Options
    </ReactTooltip>
  </span>
  <Dialog
    actions={
      <span>
        <FlatButton
          disabled={false}
          fullWidth={false}
          label="Cancel"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={false}
          secondary={false} />
        <FlatButton
          disabled={false}
          fullWidth={false}
          label="Save"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={true}
          secondary={false} />
      </span>
    }
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    modal={false}
    onRequestClose={[Function]}
    open={false}
    repositionOnUpdate={true}>
    <TextField
      disabled={false}
      floatingLabelFixed={false}
      floatingLabelText="Title"
      fullWidth={false}
      hintText="Enter new title"
      multiLine={false}
      onChange={[Function]}
      rows={1}
      type="text"
      underlineShow={true} />
    <OrgSelector
      onChange={[Function]}
      orgs={
        Array [
          "galactic-federation",
        ]
      }
      value="" />
  </Dialog>
</span>
`;

exports[`<SaveMenu /> snapshot tests matches snapshot when saving is not enabled 1`] = `
<span
  style={
    Object {
      "height": "48px",
    }
  }>
  <span>
    <div
      data-for="save-tip"
      data-tip={true}
      style={
        Object {
          "display": "inline-block",
        }
      }>
      <IconMenu
        anchorOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        animated={true}
        iconButtonElement={
          <IconButton
            disableTouchRipple={false}
            disabled={true}
            iconStyle={Object {}}
            tooltipPosition="bottom-center"
            touch={false}>
            <ContentSave />
          </IconButton>
        }
        id="menu"
        multiple={false}
        onItemTouchTap={[Function]}
        onKeyboardFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onRequestChange={[Function]}
        onTouchTap={[Function]}
        open={null}
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        touchTapCloseDelay={200}
        useLayerForClickAway={false}>
        <MenuItem
          anchorOrigin={
            Object {
              "horizontal": "right",
              "vertical": "top",
            }
          }
          checked={false}
          desktop={false}
          disabled={false}
          focusState="none"
          insetChildren={false}
          onTouchTap={[Function]}
          primaryText="Save" />
        <MenuItem
          anchorOrigin={
            Object {
              "horizontal": "right",
              "vertical": "top",
            }
          }
          checked={false}
          desktop={false}
          disabled={false}
          focusState="none"
          insetChildren={false}
          onTouchTap={[Function]}
          primaryText="Save As" />
      </IconMenu>
    </div>
    <ReactTooltip
      effect="solid"
      id="save-tip"
      insecure={true}
      place="bottom"
      resizeHide={true}
      wrapper="div">
      Login to Save
    </ReactTooltip>
  </span>
  <Dialog
    actions={
      <span>
        <FlatButton
          disabled={false}
          fullWidth={false}
          label="Cancel"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={false}
          secondary={false} />
        <FlatButton
          disabled={false}
          fullWidth={false}
          label="Save"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={true}
          secondary={false} />
      </span>
    }
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    modal={false}
    onRequestClose={[Function]}
    open={false}
    repositionOnUpdate={true}>
    <TextField
      disabled={false}
      floatingLabelFixed={false}
      floatingLabelText="Title"
      fullWidth={false}
      hintText="Enter new title"
      multiLine={false}
      onChange={[Function]}
      rows={1}
      type="text"
      underlineShow={true} />
    <OrgSelector
      onChange={[Function]}
      orgs={
        Array [
          "galactic-federation",
        ]
      }
      value="" />
  </Dialog>
</span>
`;

exports[`<SaveMenu /> snapshot tests matches snapshot when user cannot save 1`] = `
<span
  style={
    Object {
      "height": "48px",
    }
  }>
  <span>
    <div
      data-for="save-tip"
      data-tip={true}
      style={
        Object {
          "display": "inline-block",
        }
      }>
      <IconMenu
        anchorOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        animated={true}
        iconButtonElement={
          <IconButton
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            tooltipPosition="bottom-center"
            touch={false}>
            <ContentSave />
          </IconButton>
        }
        id="menu"
        multiple={false}
        onItemTouchTap={[Function]}
        onKeyboardFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onRequestChange={[Function]}
        onTouchTap={[Function]}
        open={null}
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        touchTapCloseDelay={200}
        useLayerForClickAway={false}>
        <MenuItem
          anchorOrigin={
            Object {
              "horizontal": "right",
              "vertical": "top",
            }
          }
          checked={false}
          desktop={false}
          disabled={true}
          focusState="none"
          insetChildren={false}
          onTouchTap={[Function]}
          primaryText="Save" />
        <MenuItem
          anchorOrigin={
            Object {
              "horizontal": "right",
              "vertical": "top",
            }
          }
          checked={false}
          desktop={false}
          disabled={false}
          focusState="none"
          insetChildren={false}
          onTouchTap={[Function]}
          primaryText="Save As" />
      </IconMenu>
    </div>
    <ReactTooltip
      effect="solid"
      id="save-tip"
      insecure={true}
      place="bottom"
      resizeHide={true}
      wrapper="div">
      Save Options
    </ReactTooltip>
  </span>
  <Dialog
    actions={
      <span>
        <FlatButton
          disabled={false}
          fullWidth={false}
          label="Cancel"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={false}
          secondary={false} />
        <FlatButton
          disabled={false}
          fullWidth={false}
          label="Save"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={true}
          secondary={false} />
      </span>
    }
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    modal={false}
    onRequestClose={[Function]}
    open={false}
    repositionOnUpdate={true}>
    <TextField
      disabled={false}
      floatingLabelFixed={false}
      floatingLabelText="Title"
      fullWidth={false}
      hintText="Enter new title"
      multiLine={false}
      onChange={[Function]}
      rows={1}
      type="text"
      underlineShow={true} />
    <OrgSelector
      onChange={[Function]}
      orgs={
        Array [
          "galactic-federation",
        ]
      }
      value="" />
  </Dialog>
</span>
`;
